components dinamycs propieds

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,14 +7,29 @@
 <div class="container_articles">
 
   <div class="articles_main">
-    <app-big-card></app-big-card>
+    <app-big-card photoCover="https://multiversonoticias.com.br/wp-content/uploads/2023/08/jornal-nacional.jpg"
+    cardTitle="TITULO DO CARD"
+    cardDescription="Descrição do card."
+    ></app-big-card>
   </div>
 
   <div class="articles_others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    cardTitle="NOTICES NEWS"
+    photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
+    ></app-small-card>
+    <app-small-card
+    cardTitle="NOTICES NEWS"
+    photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
+    ></app-small-card>
+    <app-small-card
+    cardTitle="NOTICES NEWS"
+    photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
+    ></app-small-card>
+    <app-small-card
+    cardTitle="NOTICES NEWS"
+    photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
+    ></app-small-card>
   </div>
 
 </div>
