--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,15 +2,15 @@
 
   <div class="big-card_photo">
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/991px-Placeholder_view_vector.svg.png" alt="" height="250px" width="396px">
+    <img src="{{ photoCover }}" alt="" height="250px" width="396px">
 
   </div>
 
   <div class="big-card_title">
-    <a href=""><h1>Saiu a nova versão do Angular</h1></a>
+    <h1><a href="">{{ cardTitle }}</a></h1>
   </div>
 
   <div class="big-card_description">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum vitae iure exercitationem fugiat, eligendi voluptatum aut explicabo iusto accusantium pariatur neque quo a voluptas dolores architecto praesentium accusamus nam quasi.</p>
+    <p>{{ cardDescription }}</p>
   </div>
 </div>
