--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,12 +3,12 @@
   <div class="container_small-card-content">
     <div class="small-card_photo">
 
-      <img src="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg" alt="" height="250px" width="396px">
+      <img src="{{photoCover}}" alt="" height="250px" width="396px">
 
     </div>
 
     <div class="small-card_title">
-      <a href=""><h1>Saiu a nova versão do Angular</h1></a>
+      <a href=""><h1>{{cardTitle}}</h1></a>
     </div>
 
     <div class="small-card_description">
