--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="small-card_title">
-      <a href=""><h1>{{cardTitle}}</h1></a>
+      <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
     </div>
 
     <div class="small-card_description">
