--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
+
 
 <app-menu-title></app-menu-title>
 
 <div class="container_articles">
 
   <div class="articles_main">
-    <app-big-card photoCover="https://multiversonoticias.com.br/wp-content/uploads/2023/08/jornal-nacional.jpg"
+    <app-big-card
+    Id="1"
+    photoCover="https://multiversonoticias.com.br/wp-content/uploads/2023/08/jornal-nacional.jpg"
     cardTitle="TITULO DO CARD"
     cardDescription="Descrição do card."
     ></app-big-card>
@@ -15,18 +15,22 @@
 
   <div class="articles_others">
     <app-small-card
+    Id="2"
     cardTitle="NOTICES NEWS"
     photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
     ></app-small-card>
     <app-small-card
+    Id="3"
     cardTitle="NOTICES NEWS"
     photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
     ></app-small-card>
     <app-small-card
+    Id="4"
     cardTitle="NOTICES NEWS"
     photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
     ></app-small-card>
     <app-small-card
+    Id="5"
     cardTitle="NOTICES NEWS"
     photoCover="https://t4.ftcdn.net/jpg/01/10/91/67/360_F_110916739_rpdUPryXBJtCLCF6RDXpPMBNnLlc4Vqm.jpg"
     ></app-small-card>
